stop double height header on iOS devices

--- a/assets/stylesheets/components/_giraffe-header.scss
+++ b/assets/stylesheets/components/_giraffe-header.scss
@@ -61,6 +61,7 @@
 
     .global-header {
         @include mq($until: tablet) {
+            height: auto;
             height: unset;
         }
         background-color: #005689;
